--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -45,6 +45,14 @@ jobs:
             llvm_enable_projects: "clang;lld"
             llvm_targets_to_build: "WebAssembly"
             emsdk_ver: "3.1.45"
+          - name: ubu24-x86-gcc12-clang-repl-19-emscripten
+            os: ubuntu-24.04
+            compiler: gcc-12
+            clang-runtime: '19'
+            cling: Off
+            llvm_enable_projects: "clang;lld"
+            llvm_targets_to_build: "WebAssembly"
+            emsdk_ver: "3.1.45"
           - name: osx15-arm-clang-clang-repl-19-emscripten
             os: macos-15
             compiler: clang
