--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -260,6 +260,10 @@ jobs:
                 -DLLVM_INCLUDE_TESTS=OFF                        \
                 ../llvm
           ninja clang clangInterpreter clangStaticAnalyzerCore -j ${{ env.ncpus }}
+          cd ./tools/
+          rm -rf $(find . -maxdepth 1 ! -name "clang" ! -name ".")
+          cd ..
+          rm compile_commands.json build.ninja
         fi
         cd ../
         rm -rf $(find . -maxdepth 1 ! -name "build" ! -name "llvm" ! -name "clang" ! -name ".")
