--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -22,6 +22,13 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - name: osx13-x86-clang-clang-repl-20
+            os: macos-13
+            compiler: clang
+            clang-runtime: '20'
+            cling: Off
+            llvm_enable_projects: "clang"
+            llvm_targets_to_build: "host"
           - name: osx13-x86-clang-clang-repl-19
             os: macos-13
             compiler: clang
@@ -236,6 +243,12 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - name: osx13-x86-clang-clang-repl-20
+            os: macos-13
+            compiler: clang
+            clang-runtime: '20'
+            cling: Off
+            cppyy: Off
           - name: osx13-x86-clang-clang-repl-19-cppyy
             os: macos-13
             compiler: clang
