--- a/environment-wasm.yml
+++ b/environment-wasm.yml
@@ -1,7 +1,8 @@
 name: CppInterOp-wasm
 channels:
-  - https://repo.mamba.pm/emscripten-forge
+  - https://repo.prefix.dev/emscripten-forge-dev
 dependencies:
+  - emscripten-abi==3.1.73
   - nlohmann_json
   - xeus-lite
   - xeus
