Use patched emsdk 3.1.73 out of emscripten-forge

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -21,13 +21,12 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - name: osx15-arm-clang-clang-repl-19-emscripten_wasm
-            os: macos-15
-            compiler: clang
+          - name: ubu24-x86-gcc12-clang-repl-19-emscripten
+            os: ubuntu-24.04
+            compiler: gcc-12
             clang-runtime: '19'
             cling: Off
             micromamba_shell_init: bash
-            emsdk_ver: "3.1.73"
 
     steps:
     - uses: actions/checkout@v4
@@ -70,15 +69,9 @@ jobs:
     - name: install mamba
       uses: mamba-org/setup-micromamba@main
       with:
-        init-shell: >-
-          ${{ matrix.micromamba_shell_init }}
-
-    - name: Setup emsdk
-      shell: bash -l {0}
-      run: |
-          git clone --depth=1 https://github.com/emscripten-core/emsdk.git
-          cd emsdk
-          ./emsdk install  ${{ matrix.emsdk_ver }}
+        environment-file: environment-wasm-build.yml
+        init-shell: bash
+        environment-name: CppInterOp-wasm-build
 
     - name: Restore Cache LLVM/Clang runtime build directory
       uses: actions/cache/restore@v4
@@ -93,11 +86,10 @@ jobs:
       if: ${{ runner.os != 'windows' }}
       shell: bash -l {0}
       run: |
-        ./emsdk/emsdk activate ${{matrix.emsdk_ver}}
-        source ./emsdk/emsdk_env.sh
-        micromamba create -f environment-wasm.yml --platform=emscripten-wasm32
+        micromamba create -f environment-wasm-host.yml --platform=emscripten-wasm32
 
         export PREFIX=$MAMBA_ROOT_PREFIX/envs/CppInterOp-wasm
+        export BUILD_PREFIX=$MAMBA_ROOT_PREFIX/envs/CppInterOp-wasm-build
         export CMAKE_PREFIX_PATH=$PREFIX
         export CMAKE_SYSTEM_PREFIX_PATH=$PREFIX
         
@@ -154,20 +146,16 @@ jobs:
         echo "LLVM_BUILD_DIR=$LLVM_BUILD_DIR" >> $GITHUB_ENV
         echo "CPLUS_INCLUDE_PATH=$CPLUS_INCLUDE_PATH" >> $GITHUB_ENV
         echo "PREFIX=$PREFIX" >> $GITHUB_ENV
+        echo "BUILD_PREFIX=$BUILD_PREFIX" >> $GITHUB_ENV
 
     - name: Build xeus-cpp
       shell: bash -l {0}
       run: |
-        ./emsdk/emsdk activate ${{matrix.emsdk_ver}}
-        source ./emsdk/emsdk_env.sh
-        export SYSROOT_PATH=$PWD/emsdk/upstream/emscripten/cache/sysroot
-        micromamba activate CppInterOp-wasm  
+        export SYSROOT_PATH=$BUILD_PREFIX/opt/emsdk/upstream/emscripten/cache/sysroot
         git clone --depth=1 https://github.com/compiler-research/xeus-cpp.git
         cd ./xeus-cpp
         mkdir build
         pushd build
-        export CMAKE_PREFIX_PATH=${{ env.PREFIX }} 
-        export CMAKE_SYSTEM_PREFIX_PATH=${{ env.PREFIX }} 
         emcmake cmake \
           -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}          \
           -DCMAKE_PREFIX_PATH=${{ env.PREFIX }}             \
@@ -186,7 +174,13 @@ jobs:
           micromamba create -n xeus-lite-host jupyterlite-core -c conda-forge
           micromamba activate xeus-lite-host
           python -m pip install jupyterlite-xeus jupyterlite-core jupyterlab notebook libarchive-c
-          jupyter lite build --XeusAddon.prefix=${{ env.PREFIX }} --contents notebooks/xeus-cpp-lite-demo.ipynb --contents notebooks/images/marie.png --contents notebooks/audio/audio.wav --output-dir dist
+          jupyter lite build \
+            --XeusAddon.prefix=${{ env.PREFIX }} \
+            --contents README.md \
+            --contents notebooks/xeus-cpp-lite-demo.ipynb \
+            --contents notebooks/images/marie.png \
+            --contents notebooks/audio/audio.wav \
+            --output-dir dist
 
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
@@ -201,7 +195,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
